k8s/iac/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-center-commander
  labels:
    app.kubernetes.io/name: data-center-commander
    app.kubernetes.io/component: logging
    app.kubernetes.io/managed-by: kubectl
    team: platform-engineering
